# ChangeLog for dev-python/django-filter
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*django-filter-0.9.2 (07 Apr 2015)

  07 Apr 2015; Johann Schmitz <ercpe@gentoo.org> +django-filter-0.9.2.ebuild,
  -django-filter-0.9.1.ebuild:
  Version bump of django-filter

*django-filter-0.9.1 (30 Dec 2014)

  30 Dec 2014; Johann Schmitz <ercpe@gentoo.org> +django-filter-0.9.1.ebuild,
  +metadata.xml:
  New ebuild for django-filter