@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*django-filter-0.10.0 (15 May 2015)
+
+  15 May 2015; Justin Lecher <jlec@gentoo.org> +django-filter-0.10.0.ebuild,
+  metadata.xml:
+  dev-python/django-filter: Version Bump
+
 *django-filter-0.9.2 (07 Apr 2015)
 
   07 Apr 2015; Johann Schmitz <ercpe@gentoo.org> +django-filter-0.9.2.ebuild,
